unpackaged/main/default/objects/Livevox_Integration_Configuration__c/Livevox_Integration_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Livevox Integration Configuration</label>
</CustomObject>