unpackaged/main/default/objects/Livevox_Integration_Configuration__c/fields/DT_Form_campaingId__c.field-meta.xml
<CustomField>
    <fullName>DT_Form_campaingId__c</fullName>
    <label>DT Form campaingId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>