unpackaged/main/default/objects/Livevox_Integration_Configuration__c/fields/DT_Form_DS_campaing_Id__c.field-meta.xml
<CustomField>
    <fullName>DT_Form_DS_campaing_Id__c</fullName>
    <label>DT Form DS campaing Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>