unpackaged/main/default/objects/Livevox_Integration_Configuration__c/fields/sessionId__c.field-meta.xml
<CustomField>
    <fullName>sessionId__c</fullName>
    <label>sessionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>